fix: 多level输入